--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,4 @@ guavaVersion=27.0-jre
 bridjVersion=0.7.0
 mapstructVersion=1.2.0.Final
 testfxVersion=4.0.8-alpha
+deltaforgeVersion=61096f472bb15d90398be8ac104f4f6b4ab5376d
